--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -49,8 +49,8 @@
               <!--end::Svg Icon-->
               <input
                 class="form-control form-control-sm form-control-solid mw-100 min-w-125px min-w-lg-150px min-w-xxl-200px ps-12"
-                data-kt-inbox-listing-filter="search"
-                placeholder="Search Inbox"
+                data-kt-inbox-listing-filter="search" data-kt-table-filter="search"
+                placeholder="{% trans 'Search Inbox' %}"
                 type="text"/>
             </div>
             <!--end::Search-->
@@ -63,111 +63,47 @@
             <!--end::Toggle-->
           </div>
           <!--end::Actions-->
+          <!--begin::Card toolbar-->
+          <div class="card-toolbar">
+            <!--begin::Toolbar-->`
+            <div class="d-flex justify-content-end"
+                 data-kt-table-toolbar="base">
+      {#        {% include 'partials/widgets/tables/_filter.html' %}#}
+              {# {% include 'partials/widgets/tables/_export.html' %}#}
+      {#        {% include 'partials/widgets/tables/_new_object.html' %}#}
+
+            </div>
+            <!--end::Toolbar-->
+            <!--begin::Group actions-->
+            <div class="d-flex justify-content-end align-items-center d-none"
+                 data-kt-table-toolbar="selected">
+              <div class="fw-bolder me-5">
+                  <span class="me-2"
+                        data-kt-table-select="selected_count"></span>Selected
+              </div>
+              <button type="button" class="btn btn-danger"
+                      data-kt-table-select="delete_selected">Delete Selected
+              </button>
+            </div>
+            <!--end::Group actions-->
+
+          </div>
+          <!--end::Card toolbar-->
         </div>
         <div class="card-body p-0 hover-scroll-overlay">
           <!--begin::Table-->
           <table class="table table-hover table-row-dashed fs-6 gy-5 my-0 min-w-900px"
-                 id="kt_inbox_listing">
+                 id="kt_datatable_list" data-server-side="true"
+                 data-ajax="{{ list_url }}?format=datatables">
             <!--begin::Table head-->
             <thead>
             <tr>
-              <th></th>
-              <th></th>
-              <th>Author</th>
-              <th>Title</th>
-              <th>Date</th>
             </tr>
             </thead>
             <!--end::Table head-->
             <!--begin::Table body-->
             <tbody>
-            <tr>
-              <td class="ps-9">
-                <!--begin::Checkbox-->
-                <div class="form-check form-check-sm form-check-custom form-check-solid mt-3">
-                  <input class="form-check-input" type="checkbox" value="1"/>
-                </div>
-                <!--end::Checkbox-->
-              </td>
-              <td class="min-w-80px">
-                <!--begin::Star-->
-                <a class="btn btn-icon btn-color-gray-400 btn-active-color-primary w-35px h-35px"
-                   data-bs-placement="right"
-                   data-bs-toggle="tooltip" href="#"
-                   title="Star">
-                  <!--begin::Svg Icon | path: icons/duotune/general/gen029.svg-->
-                  <span class="svg-icon svg-icon-3">
-            <svg fill="none" height="24"
-                 viewBox="0 0 24 24" width="24"
-                 xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M11.1359 4.48359C11.5216 3.82132 12.4784 3.82132 12.8641 4.48359L15.011 8.16962C15.1523 8.41222 15.3891 8.58425 15.6635 8.64367L19.8326 9.54646C20.5816 9.70867 20.8773 10.6186 20.3666 11.1901L17.5244 14.371C17.3374 14.5803 17.2469 14.8587 17.2752 15.138L17.7049 19.382C17.7821 20.1445 17.0081 20.7069 16.3067 20.3978L12.4032 18.6777C12.1463 18.5645 11.8537 18.5645 11.5968 18.6777L7.69326 20.3978C6.99192 20.7069 6.21789 20.1445 6.2951 19.382L6.7248 15.138C6.75308 14.8587 6.66264 14.5803 6.47558 14.371L3.63339 11.1901C3.12273 10.6186 3.41838 9.70867 4.16744 9.54646L8.3365 8.64367C8.61089 8.58425 8.84767 8.41222 8.98897 8.16962L11.1359 4.48359Z"
-                fill="currentColor"/>
-            </svg>
-          </span>
-                  <!--end::Svg Icon-->
-                </a>
-                <!--end::Star-->
-                <!--begin::Important-->
-                <a class="btn btn-icon btn-color-gray-400 btn-active-color-primary w-35px h-35px"
-                   data-bs-placement="right"
-                   data-bs-toggle="tooltip" href="#"
-                   title="Mark as important">
-                  <!--begin::Svg Icon | path: icons/duotune/general/gen056.svg-->
-                  <span class="svg-icon svg-icon-4 mt-1">
-            <svg fill="none" height="24"
-                 viewBox="0 0 24 24" width="24"
-                 xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M16.0077 19.2901L12.9293 17.5311C12.3487 17.1993 11.6407 17.1796 11.0426 17.4787L6.89443 19.5528C5.56462 20.2177 4 19.2507 4 17.7639V5C4 3.89543 4.89543 3 6 3H17C18.1046 3 19 3.89543 19 5V17.5536C19 19.0893 17.341 20.052 16.0077 19.2901Z"
-                fill="currentColor"/>
-            </svg>
-          </span>
-                  <!--end::Svg Icon-->
-                </a>
-                <!--end::Important-->
-              </td>
-              <!--begin::Author-->
-              <td class="w-150px w-md-175px">
-                <a class="d-flex align-items-center text-dark"
-                   href="../../demo1/dist/apps/inbox/reply.html">
-                  <!--begin::Avatar-->
-                  <div class="symbol symbol-35px me-3">
-                    <div class="symbol-label bg-light-danger">
-                      <span class="text-danger">M</span>
-                    </div>
-                  </div>
-                  <!--end::Avatar-->
-                  <!--begin::Name-->
-                  <span class="fw-semibold">Melody Macy</span>
-                  <!--end::Name-->
-                </a>
-              </td>
-              <!--end::Author-->
-              <!--begin::Title-->
-              <td>
-                <div class="text-dark mb-1">
-                  <!--begin::Heading-->
-                  <a class="text-dark"
-                     href="../../demo1/dist/apps/inbox/reply.html">
-                    <span class="fw-bold">Digital PPV Customer Confirmation</span>
-                    <span class="fw-bold d-none d-md-inine">-</span>
-                    <span class="d-none d-md-inine text-muted">Thank you for ordering UFC 240 Holloway vs Edgar Alternate camera angles...</span>
-                  </a>
-                  <!--end::Heading-->
-                </div>
-                <!--begin::Badges-->
-                <div class="badge badge-light-primary">inbox</div>
-                <div class="badge badge-light-warning">task</div>
-                <!--end::Badges-->
-              </td>
-              <!--end::Title-->
-              <!--begin::Date-->
-              <td class="w-100px text-end fs-7 pe-9">
-                <span class="fw-semibold">8:30 PM</span>
-              </td>
-              <!--end::Date-->
-            </tr>
+
             </tbody>
             <!--end::Table body-->
           </table>
@@ -222,5 +158,18 @@
   </style>
 {% endblock content %}
 
+{% block javascript %}
+  {{ block.super }}
+  <script src="{% static 'js/table.js' %}" ></script>
+{% endblock javascript %}
+
 {% block inline_javascript %}
+  <script>
+  $(document).ready(function () {
+    const table = DT.init('kt_datatable_list', {},
+      {
+        delete: ''
+      });
+  })
+  </script>
 {% endblock inline_javascript %}
