--- a/one/templates/layout/default.html
+++ b/one/templates/layout/default.html
@@ -26,7 +26,7 @@
             <!--end::Content-->
           </div>
           <!--end::Content wrapper-->
-          {#          {% include 'layout/partials/sidebar-layout/_footer.html' %}#}
+          {% include 'layout/partials/sidebar-layout/_footer.html' %}
         </div>
         <!--end:::Main-->
       </div>
