--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -10,7 +10,6 @@
         <div class="card-header align-items-center py-5 gap-2 gap-md-5">
           <!--begin::Actions-->
           <div class="d-flex flex-wrap gap-2">
-
             <!--begin::Checkbox-->
             <div class="form-check form-check-sm form-check-custom form-check-solid me-4 me-lg-7">
               <input class="form-check-input" data-kt-check="true"
@@ -63,12 +62,31 @@
           </div>
           <!--end::Actions-->
         </div>
+
         <div class="card-body p-0 hover-scroll-overlay">
           <!--begin::Table-->
           <table class="table table-hover table-row-dashed fs-6 gy-5 my-0 min-w-900px"
                  id="kt_datatable_list" data-server-side="true"
                  data-ajax="{{ api_list_url }}?format=datatables">
           </table>
+          <!--begin::Table head-->
+          <thead>
+          <!--begin::Table Thread-->
+            <tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0">
+              <th class="w-10px pe-2" data-data="id">
+                <div
+                  class="form-check form-check-sm form-check-custom form-check-solid me-3">
+                  <input class="form-check-input" type="checkbox" data-kt-check="true"
+                         data-kt-check-target="#kt_datatable_list .form-check-input"
+                         value="1"/>
+                </div>
+              </th>
+              <th class="text-end min-w-100px" data-data="id"></th>
+              <th class="min-w-125px" data-data="context.as_cell" data-name="name">{% translate 'Group' %}</th>
+            </tr>
+          <!--end::Table Thread-->
+          </thead>
+          <!--end::Table head-->
           <!--end::Table-->
         </div>
       </div>
