update drawer toggle

--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -54,7 +54,7 @@
           <!--end::Actions-->
         </div>
 
-        <div class="card-body p-0 hover-scroll-overlay">
+        <div class="card-body p-4 hover-scroll-overlay">
           <!--begin::Table-->
           <table class="table table-hover table-row-dashed fs-6 gy-5 my-0 min-w-900px"
                  id="kt_datatable_list" data-server-side="true"
@@ -73,6 +73,7 @@
               </th>
               <th class="text-end min-w-100px" data-data="id"></th>
               <th class="min-w-125px" data-data="name" data-name="name">{% translate 'Group' %}</th>
+              <th class="min-w-125px text-end pe-4" data-sortable="false">{% translate 'Action' %}</th>
             </tr>
             <!--end::Table Thread-->
             </thead>
