--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -71,8 +71,9 @@
                          value="1"/>
                 </div>
               </th>
-              <th class="text-end min-w-100px" data-data="id"></th>
-              <th class="min-w-125px" data-data="name" data-name="name">{% translate 'Group' %}</th>
+              {% for field in table_fields %}
+                <th class="min-w-125px" data-data="{{ field.col_name }}" data-type="{{ field.type }}">{{ field.verbose_name|title }}</th>
+              {% endfor %}
               <th class="min-w-125px text-end pe-4" data-sortable="false">{% translate 'Action' %}</th>
             </tr>
             <!--end::Table Thread-->
