--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -64,17 +64,12 @@
             <!--begin::Table Thread-->
             <tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0">
               <th class="w-10px pe-2" data-data="id">
-                <div
-                  class="form-check form-check-sm form-check-custom form-check-solid me-3">
-                  <input class="form-check-input" type="checkbox" data-kt-check="true"
-                         data-kt-check-target="#kt_datatable_list .form-check-input"
-                         value="1"/>
-                </div>
+
               </th>
               {% for field in table_fields %}
                 <th class="min-w-125px" data-data="{{ field.col_name }}" data-type="{{ field.type }}">{{ field.verbose_name|title }}</th>
               {% endfor %}
-              <th class="min-w-125px text-end pe-4" data-sortable="false">{% translate 'Action' %}</th>
+{#              <th class="min-w-125px text-end pe-4" data-data="" data-sortable="false">{% translate 'Action' %}</th>#}
             </tr>
             <!--end::Table Thread-->
             </thead>
