--- a/one/templates/layout/partials/sidebar-layout/_header.html
+++ b/one/templates/layout/partials/sidebar-layout/_header.html
@@ -19,7 +19,7 @@
     <!--begin::Header wrapper-->
     <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1" id="kt_app_header_wrapper">
 
-{#      {% include 'layout/partials/header-layout/header/_menu/_menu.html' %}#}
+      {% include 'layout/partials/header-layout/header/_menu/_menu.html' %}
 
       {% include 'layout/partials/header-layout/header/_navbar.html' %}
 
