update list scroll horizontal

--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -67,7 +67,7 @@
           <!--end::Actions-->
         </div>
 
-        <div class="card-body p-0 hover-scroll-overlay">
+        <div class="card-body p-0">
           <!--begin::Table-->
           <table class="table table-hover table-row-dashed fs-6 gy-5 gs-2 my-0 min-w-900px"
                  id="kt_datatable_list" data-server-side="true"
