--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -67,9 +67,10 @@
           <!--end::Actions-->
         </div>
 
+
         <div class="card-body p-2">
           <!--begin::Table-->
-          <table data-kt-scroll="true" class="table table-hover table-row-dashed fs-6 gy-5 gs-2 my-0 min-w-900px"
+          <table class="table table-hover table-row-dashed fs-6 gy-5 gs-2 my-0 min-w-900px"
                  id="kt_datatable_list" data-server-side="true"
                  data-ajax="{% url api_urls.list %}?format=datatables">
             <!--begin::Table head-->
