--- a/one/templates/app/form.html
+++ b/one/templates/app/form.html
@@ -1,17 +1,22 @@
 <!--begin::Basic info-->
 <div class="card mb-5 mb-xl-10">
   <!--begin::Card header-->
-  <div class="card-header border-0 cursor-pointer" role="button" data-bs-toggle="collapse"
-       data-bs-target="#kt_account_profile_details" aria-expanded="true" aria-controls="kt_account_profile_details">
+  <div class="card-header collapsible border-0 cursor-pointer rotate" data-bs-toggle="collapse"
+       data-bs-target="#kt_default_form" aria-expanded="true" aria-controls="kt_account_profile_details">
     <!--begin::Card title-->
     <div class="card-title m-0">
       <h3 class="fw-bold m-0">{{ form_title }}</h3>
     </div>
     <!--end::Card title-->
+    <!--begin::Card toolbar-->
+    <div class="card-toolbar rotate-180">
+        {% get_svg_icon 'duotune/arrows/arr065.svg' 'svg-icon svg-icon-1' %}
+    </div>
+    <!--end::Card toolbar-->
   </div>
   <!--begin::Card header-->
   <!--begin::Content-->
-  <div id="kt_account_settings_profile_details" class="collapse show">
+  <div id="kt_default_form" class="collapse show">
     {% include 'forms/one-col-form.html' %}
   </div>
   <!--end::Content-->
