--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -189,7 +189,7 @@
         //endpoint
         {
           add: "",
-          edit: "",
+          edit: "{% url urls.update '0000' %}",
           delete: "{% url api_urls.delete %}",
         },
         //language
