update remove, view action

--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -192,7 +192,7 @@
         //endpoint
         {
           add: "",
-          edit: "{% url urls.update '0000' %}",
+          edit: "{% url urls.update '0000' %}?popup=1",
           delete: "{% url api_urls.delete %}",
         },
         //language
