update remove, view action

--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -80,7 +80,7 @@
               <th class="w-10px pe-2" data-data="id">
                 <div class="form-check form-check-sm form-check-custom form-check-solid me-3">
                   <input class="form-check-input" type="checkbox" data-kt-check="true"
-                         data-kt-check-target="#kt_datatable_list .form-check-input" value="1">
+                         data-kt-check-target="#kt_datatable_list .form-check-input[name='id']">
                 </div>
               </th>
               {% for field in table_fields %}
