update trans load from api, fix tooltip

--- a/one/templates/app/list.html
+++ b/one/templates/app/list.html
@@ -115,7 +115,7 @@
 
       style="align-self: start">
       <!--begin::Sticky aside-->
-      <div class="card card-flush mb-0 p-2" data-kt-sticky="true"
+      <div class="card card-flush flex-fill mb-0 p-2" data-kt-sticky="true"
            data-kt-sticky-animation="false"
            data-kt-sticky-left="auto"
            data-kt-sticky-offset="{default: false, xl: '100px'}"
